# redirect

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml  nginx.conf  redirect.conf
src/: main.rs
src/routes/: link.rs  mod.rs
