[package]
name = "redirect"
version = "0.1.0"
edition = "2021"


[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "fs", "signal"] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["cors", "timeout", "trace"] }
axum = { version = "0.7.5", features = ["macros"] }
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
